# mts-spi-study-cluster

./: .gitignore  README_cluster.md  cml_kur.ipynb  feature_selection.py  find_non_overlapping_distributions.ipynb  find_non_overlapping_distributions.py  mts_prev.ipynb  process_features.py  pyproject.toml  requirements.txt  self2.ipynb  test_features.py  test_features_directed.py
Random/: colors.txt
configs/: blended_config.yaml  experiments_dev.yaml  experiments_full.yaml  experiments_full_2.yaml  experiments_full_3.yaml  experiments_full_4.yaml  experiments_full_5.yaml  experiments_full_cml_kur.yaml  experiments_full_var-variants.yaml  oliver_spi_config.yaml
configs/cases/: experiments_case_1.yaml  experiments_case_2.yaml  experiments_case_3.yaml  experiments_case_4.yaml  test_case_2.yaml
configs/combined/: combined_0.yaml  combined_1.yaml
configs/full/: experiments_dev.yaml  experiments_full_2.yaml  experiments_full_3.yaml  experiments_full_4.yaml  experiments_full_5.yaml  experiments_full_var-variants.yaml
configs/pyspi/: blended_sonnet_config.yaml  case_1_config.yaml  case_2_config.yaml  case_3_config.yaml  (+2 more)
jobs/: run_spi_array.pbs  run_spi_array_2.pbs  run_spi_array_4.pbs  run_spi_array_cml_kur.pbs  run_spi_single.py  run_spi_spi_feature_selection.pbs  submit_3_and_4.sh
src/: compute.py  feature_selection.py  features.py  generate.py  java_bridge.py  mapping.py  plot_style.py  pyspi_patches.py  run_experiments.py  spi_color.py  spi_space_feature_selection.py  spi_space_features.py  spi_space_umap.py  umap.py  utils.py  visualization.py
(+12 files in other folders)
